<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/burbujas"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="93dp"
        android:layout_marginTop="227dp"
        android:layout_marginEnd="93dp"
        android:layout_marginBottom="275dp"
        android:contentDescription="@string/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.354"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.223"
        app:srcCompat="@drawable/winner" />

    <TextView
        android:id="@+id/tvTiempo"
        android:layout_width="122dp"
        android:layout_height="35dp"
        android:layout_marginTop="64dp"
        android:text="@string/tiempo"
        android:textAlignment="textStart"
        android:textColor="@color/orange"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.19"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewGanador" />

    <TextView
        android:id="@+id/tvTiempoNumeros"
        android:layout_width="175dp"
        android:layout_height="33dp"
        android:layout_marginTop="64dp"
        android:textAlignment="center"
        android:textColor="@color/orange"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.889"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewGanador" />

    <TextView
        android:id="@+id/textViewGanador"
        android:layout_width="357dp"
        android:layout_height="75dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/bubblegum_sans"
        android:text="@string/ganaste"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/orange"
        android:textSize="74sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvPuntosNumeros"
        android:layout_width="175dp"
        android:layout_height="33dp"
        android:layout_marginTop="24dp"
        android:textAlignment="center"
        android:textColor="@color/orange"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.885"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewGanador" />

    <TextView
        android:id="@+id/tvPuntos"
        android:layout_width="160dp"
        android:layout_height="36dp"
        android:layout_marginTop="24dp"
        android:text="@string/puntuacion"
        android:textAlignment="textStart"
        android:textColor="@color/orange"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.22"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewGanador" />

</androidx.constraintlayout.widget.ConstraintLayout>